refactor: Math.clamp for occupancy, single-query min base price fallback